@@ -33,6 +33,8 @@ Examples:
   hbase> # The above in shorthand would be the following:
   hbase> create 't1', 'f1', 'f2', 'f3'
   hbase> create 't1', {NAME => 'f1', VERSIONS => 1, TTL => 2592000, BLOCKCACHE => true}
+  hbase> create 't1', 'f1', {SPLITS => ['10', '20', '30', '40']}
+  hbase> create 't1', 'f1', {SPLITS_FILE => 'splits.txt'}
 EOF
       end
 
